pulldown-cmark-mdcat/tests/snapshots/render/iterm2@commonmark-spec-141-fenced_code_blocks.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 124
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/141-fenced_code_blocks.md
---
]1337;SetMark\[1m[34m┄┄[0m[1m[34mfoo[0m

[32m────────────────────[0m
[33mbar
[0m[32m────────────────────[0m

]1337;SetMark\[1m[34m┄[0m[1m[34mbaz[0m
